# email-spam-detector

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  quickstart.sh
.github/workflows/: ci.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
notebooks/: 01_training.ipynb  02_inference.ipynb
src/spam_detector/: __init__.py  api.py  config.py  data_generator.py  predict.py  train.py
tests/: __init__.py  test_api.py  test_data_generator.py
